2010-05-17  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Copy PreloadScanner.* to HTML5Tokenizer.* to start work on the new HTML5 Tokenizer
        https://bugs.webkit.org/show_bug.cgi?id=39261

        This time copy the cpp from the right file.

        * html/HTML5Tokenizer.cpp: Copied from WebCore/html/PreloadScanner.cpp.

2010-05-17  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Copy PreloadScanner.* to HTML5Tokenizer.* to start work on the new HTML5 Tokenizer
        https://bugs.webkit.org/show_bug.cgi?id=39261

        * html/HTML5Tokenizer.cpp: Copied from WebCore/html/PreloadScanner.h.
        * html/HTML5Tokenizer.h: Copied from WebCore/html/PreloadScanner.h.

2010-05-17  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        [Chromium] Windows: Speed of indeterminate progress bar should be constant
        https://bugs.webkit.org/show_bug.cgi?id=39211

        No new tests, animation effect can be confirmed only manually.

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::animationDurationForProgressBar):
        (WebCore::RenderThemeChromiumWin::paintProgressBar):

2010-05-17  Drew Wilson  <atwilson@chromium.org>

        Unreviewed build fix for Qt and Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=39147

        * page/Frame.h: Now includes CSSMutableStyleDeclaration.h.

2010-05-17  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler.

        Remove unused member member from Document
        https://bugs.webkit.org/show_bug.cgi?id=39251

        Remove m_associatedHistoryItems from Document; it is never used.

        * dom/Document.h:

2010-05-17  Darin Adler  <darin@apple.com>

        Fix Qt build.

        * page/Frame.cpp:
        (WebCore::Frame::setTypingStyle): Move back to make non-inline.
        * page/Frame.h: Removed inline version of setTypingStyle.
